<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2b2b2b"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/rl_startMenu"
    tools:context=".activity.StartMenuActivity">

    <TextView
        android:textColor="#85BF25"
        android:text="@string/application_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:textSize="15pt"
        android:textStyle="italic"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/b_play"
        android:textColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/textView"
        android:layout_toStartOf="@+id/textView"
        android:layout_marginBottom="97dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:text="@string/multijoueur"
        android:id="@+id/b_multiplayer"
        android:layout_alignTop="@+id/b_play"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:text="@string/credits"
        android:id="@+id/b_credits"
        android:layout_alignTop="@+id/b_play"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />
</RelativeLayout>
