<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.GameActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tv_question"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vrai"
        android:id="@+id/b_true"
        android:layout_marginBottom="126dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/b_next"
        android:layout_toStartOf="@+id/b_next" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faux"
        android:id="@+id/b_false"
        android:layout_alignTop="@+id/b_true"
        android:layout_toRightOf="@+id/b_next"
        android:layout_toEndOf="@+id/b_next" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tv_result"
        android:layout_below="@+id/b_false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_question"
        android:id="@+id/b_next"
        android:layout_below="@+id/tv_result"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:id="@+id/b_score"
        android:layout_below="@+id/tv_result"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_heart"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
